[package]
name = "simd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "0.4.0"
criterion = "0.4.0"
nalgebra = "0.32.1"

[profile.release]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
